[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/objects/save_station/sSaveStation2_0.png" type="Texture" id=1]
[ext_resource path="res://sprites/objects/save_station/sSaveStation2_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/objects/save_station/sSaveStation2_3.png" type="Texture" id=3]
[ext_resource path="res://sprites/objects/save_station/sSaveStation2_4.png" type="Texture" id=4]
[ext_resource path="res://sprites/objects/save_station/sSaveStation2_1.png" type="Texture" id=5]
[ext_resource path="res://scenes/objects/save_station/SaveStation.gd" type="Script" id=6]
[ext_resource path="res://scenes/Samus/visors/scan/ScanNode.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/notifications/ButtonPopup/ButtonPopup.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "up",
"speed": 15.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "down",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21, 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 42, 32 )

[sub_resource type="Animation" id=6]
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Effect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Effect/Ghost:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 0.277392, 0.277392 ),
"update": 0,
"values": [ Vector2( 20.5, 20 ), Vector2( 20.5, 20 ), Vector2( 20.5, 62 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Effect/Ghost:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SaveStation" type="StaticBody2D"]
collision_layer = 524288
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "up"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="StepArea" type="Area2D" parent="."]
visible = false
collision_layer = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepArea"]
position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="SaveArea" type="Area2D" parent="."]
visible = false
collision_layer = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="SaveArea"]
position = Vector2( 0, -16 )
shape = SubResource( 4 )

[node name="ScanNode" parent="." instance=ExtResource( 7 )]
length = 0
data_key = "save_station"

[node name="CollisionShape2D" parent="ScanNode" index="0"]
position = Vector2( 0, 6 )
shape = SubResource( 5 )

[node name="Effect" type="Control" parent="."]
modulate = Color( 0, 0.529412, 1, 0.537255 )
margin_left = -21.0
margin_top = -53.0
margin_right = 21.0
margin_bottom = -12.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ghost" type="Node2D" parent="Effect"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 20.5, 20 )

[node name="Tween" type="Tween" parent="."]

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( -1, -16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/save = SubResource( 6 )

[node name="ButtonPopup" parent="." instance=ExtResource( 8 )]

[connection signal="body_entered" from="StepArea" to="." method="_on_Step_body_entered"]
[connection signal="body_exited" from="StepArea" to="." method="_on_Step_body_exited"]
[connection signal="body_entered" from="SaveArea" to="." method="_on_Step_body_entered"]
[connection signal="body_exited" from="SaveArea" to="." method="_on_Step_body_exited"]

[editable path="ScanNode"]
